@@ -9,5 +9,6 @@ if __name__ == "__main__":
     application = make_app(debug=False, gzip=True, compress_response=True)
     application.listen(options.port, address=options.address)
     logger = logging.getLogger("tornado.application")
-    logger.info("Starting powa-web on http://%s:%s", options.address, options.port)
+    logger.info("Starting powa-web on http://%s:%s%s",
+                options.address, options.port, options.url_prefix)
     tornado.ioloop.IOLoop.instance().start()
