@@ -37,33 +37,35 @@ class IndexHandler(AuthHandler):
         return self.redirect(options.index_url)
 
 
-URLS = [
-    U(r"/login/", LoginHandler, name="login"),
-    U(r"/logout/", LogoutHandler, name="logout"),
-    U(r"/reload_collector/", CollectorReloadHandler, name="reload_collector"),
-    U(r"/server/select", ServerSelector, name="server_selector"),
-    U(r"/database/select", DatabaseSelector, name="database_selector"),
-    U(r"/", IndexHandler, name="index"),
-    U(r"/server/(\d+)/database/([^\/]+)/suggest/", IndexSuggestionHandler,
-      name="index_suggestion")
-]
-
-
-for dashboard in (Overview,
-                  ServerOverview,
-                  DatabaseOverview,
-                  QueryOverview,
-                  QualOverview,
-                  RepositoryConfigOverview,
-                  RemoteConfigOverview):
-    URLS.extend(dashboard.url_specs())
-
-
 def make_app(**kwargs):
     """
     Parse the config file and instantiate a tornado app.
     """
     parse_options()
+
+    URLS = [
+        U(r"%slogin/" % options.url_prefix, LoginHandler, name="login"),
+        U(r"%slogout/" % options.url_prefix, LogoutHandler, name="logout"),
+        U(r"%sreload_collector/" % options.url_prefix, CollectorReloadHandler,
+          name="reload_collector"),
+        U(r"%sserver/select" % options.url_prefix, ServerSelector,
+          name="server_selector"),
+        U(r"%sdatabase/select" % options.url_prefix, DatabaseSelector,
+          name="database_selector"),
+        U(r"%s" % options.url_prefix, IndexHandler, name="index"),
+        U(r"%sserver/(\d+)/database/([^\/]+)/suggest/" % options.url_prefix,
+          IndexSuggestionHandler, name="index_suggestion")
+    ]
+
+    for dashboard in (Overview,
+                      ServerOverview,
+                      DatabaseOverview,
+                      QueryOverview,
+                      QualOverview,
+                      RepositoryConfigOverview,
+                      RemoteConfigOverview):
+        URLS.extend(dashboard.url_specs(options.url_prefix))
+
     _cls = Application
     if 'legacy_wsgi' in kwargs:
         from tornado.wsgi import WSGIApplication
@@ -73,8 +75,9 @@ def make_app(**kwargs):
         URLS,
         ui_modules=ui_modules,
         ui_methods=ui_methods,
-        login_url="/login/",
+        login_url=("%slogin/" % options.url_prefix),
         static_path=os.path.join(POWA_ROOT, "static"),
+        static_url_prefix=("%sstatic/" % options.url_prefix),
         cookie_secret=options.cookie_secret,
         template_path=os.path.join(POWA_ROOT, "templates"),
         **kwargs)
