@@ -10,6 +10,7 @@
     Rouhaud)
   - Display configuration changes and PostgreSQL restart on graphs when
     pg_track_settings is configured (Julien Rouhaud)
+  - Add an url_prefix parameter (Julien Rouhaud and github user rippiedoos)
   - Fix longstanding bug in graph hover boxes position (Julien Rouhaud)
   - Provide metric definitions and link to the documentation on the graph
     (Julien Rouhaud)
